@@ -41,3 +41,4 @@
 20-Feb-2020 V0.49 Combine missing UniProt accessions if available with other reference sequence data.
 26-Feb-2020 V0.50 Standardize case for gene names.
  1-Apr-2020 V0.51 Better handling of incomplete primary gene annotations
+ 5-Apr-2020 V0.52 Suppress diagnostic logging in ReferenceSequenceCacheProvider()
